Documents/MetaDataIO/MetadataIO-distr-33.0.3-bin/repos/src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Deal Registration Lead</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Archived</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified - Convert</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Partner Recruitment</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Approved</fullName>
        </values>
        <values>
            <fullName>Pending</fullName>
        </values>
        <values>
            <fullName>Rejected</fullName>
        </values>
        <values>
            <fullName>Submitted</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Sales Lead</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Archived</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified - Convert</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Accept_Disclaimer__c</fullName>
        <label>Accept Disclaimer</label>
        <picklist>
            <picklistValues>
                <fullName>I have read and I agree</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Address_Mapped__c</fullName>
        <formula>HYPERLINK(&quot;http://maps.google.com?q=&quot; &amp; Street &amp; &quot;%20&quot; &amp; City &amp; &quot;%20&quot; &amp; State &amp; &quot;%20&quot; &amp; PostalCode,IMAGE(&quot;https://na1.salesforce.com/servlet/servlet.FileDownload?file=015o0000000LqH5&quot;, &quot;Map Address in Google&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address Mapped</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Archive_Interest_Level_1__c</fullName>
        <label>Archive Interest Level</label>
        <picklist>
            <controllingField>Status</controllingField>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Competition__c</fullName>
        <label>Competition</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitive_Deal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Competitive Deal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_City__c</fullName>
        <label>Contact City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Company__c</fullName>
        <label>Contact Company</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Country__c</fullName>
        <label>Contact Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <label>Contact Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <label>Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact_Postal_Code__c</fullName>
        <label>Contact Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_State_Province__c</fullName>
        <label>Contact State/Province</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Title__c</fullName>
        <label>Contact Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Converted_Month__c</fullName>
        <formula>CASE( MONTH(ConvertedDate) , 1, &quot;January&quot;, 2, &quot;February&quot;, 3, &quot;March&quot;,  4, &quot;April&quot;,  5, &quot;May&quot;,  6, &quot;June&quot;, 7, &quot;July&quot;, 8, &quot;August&quot;, 9, &quot;September&quot;, 10, &quot;October&quot;, 11, &quot;November&quot;, 12, &quot;December&quot;, &quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Converted Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_End_Cust_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to trigger a field update to run (for web2lead deal registration submissions) whereby the Temp_End_Customer_Email__c value is copied to the standard email field</description>
        <label>Copy End Cust Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Create_Month__c</fullName>
        <formula>CASE( MONTH( Created_Date_without_Time__c  ) , 1, &quot;January&quot;, 2, &quot;February&quot;, 3, &quot;March&quot;,  4, &quot;April&quot;,  5, &quot;May&quot;,  6, &quot;June&quot;, 7, &quot;July&quot;, 8, &quot;August&quot;, 9, &quot;September&quot;, 10, &quot;October&quot;, 11, &quot;November&quot;, 12, &quot;December&quot;, &quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Date_without_Time__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date without Time</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>D_U_N_S__c</fullName>
        <label>D-U-N-S Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Lead Details Captured&quot;, &quot;Missing: &quot;&amp;IF( LEN( FirstName)=0,&quot;First Name, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN(LastName)=0, &quot;Last Name, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Company)=0, &quot;Company, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Phone)=0, &quot;Phone, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL(Salutation,&quot;&quot;), &quot;Salutation, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL(Rating,&quot;&quot;), &quot;Rating, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(City)=0, &quot;Complete Address, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Email)=0, &quot;Email&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF(LEN( FirstName ) = 0, 0,15) + IF(LEN( LastName ) = 0, 0,15) + IF(LEN( Company ) = 0, 0,15) + IF(LEN( Phone ) = 0, 0,15) + IF( ISPICKVAL( Salutation,&quot;&quot;), 0,10) + IF( ISPICKVAL(Rating,&quot;&quot;), 0,10) + IF( LEN( City ) = 0, 0,10) + IF( LEN( Email ) = 0, 0,10)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Converted__c</fullName>
        <formula>ConvertedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Converted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Left_Until_Expiry__c</fullName>
        <formula>if(ISNULL(Registration_Expiration__c),0, if(Registration_Expiration__c - TODAY() &gt;0, Registration_Expiration__c - TODAY(),0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Left Until Expiry</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deal_Approved_Date__c</fullName>
        <description>Stored the date the deal registraion was approved (via field updates) and is used in lead conversion so the opportunity has the date the deal was registered and can be used to count when the deal expires</description>
        <label>Deal Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deal_Forward__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deal Forward</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deal_ID__c</fullName>
        <displayFormat>{0000000}</displayFormat>
        <label>Deal ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Deal_Source__c</fullName>
        <label>Deal Source</label>
        <picklist>
            <picklistValues>
                <fullName>Existing Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Decision_Role__c</fullName>
        <label>Decision Role</label>
        <picklist>
            <picklistValues>
                <fullName>Decison Maker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recommender</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Influencer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Decision_Timeframe__c</fullName>
        <label>Decision Timeframe</label>
        <picklist>
            <picklistValues>
                <fullName>Immediately</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-3 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3-6 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6-12 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Next Year</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Disqual_Reason_1__c</fullName>
        <label>Disqual/Archive Reason</label>
        <picklist>
            <controllingField>Status</controllingField>
            <picklistValues>
                <fullName>No Budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Decision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Power</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lack of Vision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Never Reached</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wrong Information</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Distributor__c</fullName>
        <label>Distributor</label>
        <picklist>
            <picklistValues>
                <fullName>CDW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ingram Micro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tech Data</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email_New_Owner__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used when forwarding opportunities to leads. When set to true it automatically sends an email to the new owner.</description>
        <label>Email New Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Estimated_Close_Date__c</fullName>
        <description>For deal registration</description>
        <label>Estimated Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FN__Do_Not_Map__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Map</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FN__Find_Nearby__c</fullName>
        <formula>IF( ISPICKVAL(FN__Mapping_Status__c , &apos;Located&apos;),  HYPERLINK( &quot;apex/FN__FindNearbymap?aid=null&amp;lid=&quot; &amp; Id,&quot;Map it!&quot;,&quot;_parent&quot;) ,   HYPERLINK( &quot;apex/FN__LGeoCode?id=&quot; &amp; Id,&quot;Locate Lead&quot;,&quot;_parent&quot;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Find Nearby</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FN__Lat__c</fullName>
        <label>Latitude</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FN__Lon__c</fullName>
        <label>Longitude</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FN__Mapping_Status__c</fullName>
        <label>Mapping Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Located Yet</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Located</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Problem with Address</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Has_Budget__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Budget</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InterviewID__c</fullName>
        <label>InterviewID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Know_Decision_Maker__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Decision Maker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Company_Id__c</fullName>
        <description>LinkedIn Id of the company</description>
        <label>LinkedIn Company Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Member_Token__c</fullName>
        <description>LinkedIn Id of the member/lead</description>
        <label>LinkedIn Member Token</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Modified_days__c</fullName>
        <formula>ROUND(NOW()- LastModifiedDate , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Modified (days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <label>Latitude</label>
        <precision>13</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Age__c</fullName>
        <formula>NOW() - LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Age_days_1__c</fullName>
        <formula>ROUND(NOW()-CreatedDate, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Age (days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Number__c</fullName>
        <displayFormat>{000000}</displayFormat>
        <label>Lead Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Lead_Quality__c</fullName>
        <formula>IF( Lead_Total__c &lt;= 5, IMAGE(&apos;/resource/1312556427000/jsSDO__dollar_one&apos;, &apos;one&apos;) , 
IF( ((5 &lt; Lead_Total__c ) &amp;&amp; (Lead_Total__c &lt;=15)), IMAGE(&apos;/resource/1312556427000/jsSDO__dollar_three&apos;, &apos;three&apos;), 
IMAGE(&apos;/resource/1325290514000/dollar_five&apos;, &apos;five&apos;) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Quality</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Rank__c</fullName>
        <formula>IF( (   Lead_Total__c   &gt;15),&quot;High Priority&quot;, IF(AND( Lead_Total__c  &lt;16, Lead_Total__c  &gt; 5),&quot;Medium Priority&quot;, &quot;Low Priority&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Rank</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Total__c</fullName>
        <formula>Score1__c  + Score2__c  +Score3__c + Score4__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <label>Longitude</label>
        <precision>13</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Interest__c</fullName>
        <label>Product Interest</label>
        <picklist>
            <picklistValues>
                <fullName>Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <picklist>
            <picklistValues>
                <fullName>GC1000 series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC5000 series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC10001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC20002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC50000</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Project_Budget_Amount__c</fullName>
        <label>Project Budget Amount</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project_Budgeted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Project Budgeted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Defined__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Project Defined</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Description__c</fullName>
        <label>Project Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <label>Project Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Registration_Expiration__c</fullName>
        <description>Used for deal registration</description>
        <label>Registration Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Report_Create_Month_1__c</fullName>
        <formula>CASE( MONTH(Reported_Create_Month_del_1__c ) , 1, &quot;January&quot;, 2, &quot;February&quot;, 3, &quot;March&quot;,  4, &quot;April&quot;,  5, &quot;May&quot;,  6, &quot;June&quot;, 7, &quot;July&quot;, 8, &quot;August&quot;, 9, &quot;September&quot;, 10, &quot;October&quot;, 11, &quot;November&quot;, 12, &quot;December&quot;, &quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Report Create Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reported_Convert_Date_1__c</fullName>
        <label>Reported Convert Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reported_Converted__c</fullName>
        <formula>CASE( MONTH(Reported_Convert_Date_1__c ) , 1, &quot;January&quot;, 2, &quot;February&quot;, 3, &quot;March&quot;,  4, &quot;April&quot;,  5, &quot;May&quot;,  6, &quot;June&quot;, 7, &quot;July&quot;, 8, &quot;August&quot;, 9, &quot;September&quot;, 10, &quot;October&quot;, 11, &quot;November&quot;, 12, &quot;December&quot;, &quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reported Converted</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reported_Create_Month_del_1__c</fullName>
        <label>Reported Create Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reseller_Company_Name__c</fullName>
        <label>Reseller Company Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reseller_Email__c</fullName>
        <label>Reseller Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Reseller_First_Name__c</fullName>
        <label>Reseller First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reseller_Last_Name__c</fullName>
        <label>Reseller Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reseller_Phone__c</fullName>
        <label>Reseller Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>RoundRobin__c</fullName>
        <formula>CASE(MOD(VALUE( Lead_Number__c ),3),0,&quot;General Queue&quot;, 1, &quot;International Queue&quot;, 2, &quot;Target Campaign&quot;,&quot;Invalid ID&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Round Robin ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score10__c</fullName>
        <formula>IF( ( AnnualRevenue &gt;2000000),10, IF(AND( AnnualRevenue &lt; 2000000, AnnualRevenue &gt; 1000000),5,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Legacy</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score1__c</fullName>
        <formula>IF (  Know_Decision_Maker__c  ,5,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Decision Maker Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score2__c</fullName>
        <formula>IF(  Project_Defined__c ,3,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Defined Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>View_Guidelines__c</fullName>
        <formula>HYPERLINK(&quot;https://na1.salesforce.com/servlet/servlet.ImageServer?oid=00Do0000000HAAk&amp;id=015o0000000LqH8&quot;, &quot;View Guidelines&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View Guidelines</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Fcbk_Image_Url__c</fullName>
        <label>Facebook Image Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Fcbk_Picture__c</fullName>
        <formula>HYPERLINK(sf4twitter__Fcbk_Profile_Url__c,
IF( ( NOT( ISBLANK( sf4twitter__Fcbk_Image_Url__c) )), IMAGE( sf4twitter__Fcbk_Image_Url__c  ,sf4twitter__Fcbk_Profile_Url__c, 48, 48), sf4twitter__Fcbk_Profile_Url__c )
,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Facebook Picture</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Fcbk_Profile_Url__c</fullName>
        <label>Facebook Profile Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Fcbk_User_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Facebook User Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>sf4twitter__Fcbk_Username__c</fullName>
        <label>Facebook Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Follow_Status__c</fullName>
        <description>Click on link to change following status</description>
        <formula>HYPERLINK(
&apos;javascript:window.location=&quot;/apex/sf4twitter__TwitterFollow?lid=&apos; + Id + &apos;&quot; + ( ( (new RegExp(&quot;[\\?&amp;]isdtp=([^&amp;#]*)&quot;)).exec(window.location.href) == null )?&quot;&quot;: &quot;&amp;isdtp=vw&quot;) &apos;, 
IF(sf4twitter__followed__c == true,&apos;Yes&apos;, &apos;No&apos; ), 
&apos;_self&apos;  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Click on link to change following status</inlineHelpText>
        <label>Following on Twitter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Klout_Number__c</fullName>
        <label>Klout Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Klout_Score__c</fullName>
        <formula>IF( ABS( sf4twitter__Klout_Number__c )  &gt; 0, TEXT( sf4twitter__Klout_Number__c ) + &apos;  &apos; + IMAGE($Setup.sf4twitter__Twitter_Public_Configuration__c.sf4twitter__Klout_Score_logo__c,&apos;Klout&apos;,17,90), &apos;&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Klout Score</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Origin__c</fullName>
        <label>Origin</label>
        <picklist>
            <picklistValues>
                <fullName>Facebook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Twitter</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Twitter_Bio__c</fullName>
        <label>Twitter Bio</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Twitter_Creation_Date__c</fullName>
        <label>Twitter Creation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Twitter_Follower_count__c</fullName>
        <label>Twitter Follower count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Twitter_Following_count__c</fullName>
        <label>Twitter Following count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Twitter_Image_Url__c</fullName>
        <label>Twitter Image Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Twitter_Last_tweet__c</fullName>
        <label>Twitter Last tweet</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Twitter_Location__c</fullName>
        <label>Twitter Location</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Twitter_Picture__c</fullName>
        <formula>HYPERLINK(
&apos;http://twitter.com/&apos; + sf4twitter__Twitter_Username__c,
IF( ( NOT( ISBLANK( sf4twitter__Twitter_Image_Url__c ) )), IMAGE( sf4twitter__Twitter_Image_Url__c ,&apos;http://twitter.com/&apos; + sf4twitter__Twitter_Username__c, 48, 48), 
IF( NOT( ISBLANK( sf4twitter__Twitter_Username__c ) ), &apos;http://twitter.com/&apos; + sf4twitter__Twitter_Username__c, &apos;&apos; ) )
,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Twitter Picture</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Twitter_Status_count__c</fullName>
        <label>Twitter Status count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Twitter_User_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Twitter User Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>sf4twitter__Twitter_Username__c</fullName>
        <label>Twitter Username</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__followed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Followed</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Qualified - Convert</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>MyLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Mine</filterScope>
        <label>My Leads</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
            <allPartnerUsers></allPartnerUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Unassigned_Partner_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Queue</filterScope>
        <label>00 - Unassigned Partner Leads</label>
        <language>en_US</language>
        <queue>UnassignedPartnerLeads</queue>
    </listViews>
    <listViews>
        <fullName>X00_Partner_Sourced_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER.ALIAS</field>
            <operation>equals</operation>
            <value>jpres,trese</value>
        </filters>
        <label>00 -  Partner Sourced Leads</label>
        <language>en_US</language>
    </listViews>
</CustomObject>